# dappish

./: .ghci  .gitignore  Main.hs  Makefile  dappish.cabal  dcs.dapp  dcs.dapp.md  default.nix  shell.nix
src/: Dappish.hs
src/Dappish/: AST.hs  Grok.hs  Parser.hs  Prelude.hs  Solidify.hs
test/: Test.hs
